--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,4 +3,5 @@ ARG PACKAGE_NAME
 ENV PACKAGE_NAME=${PACKAGE_NAME}
 WORKDIR /app
 COPY ${PACKAGE_NAME}.jar ./${PACKAGE_NAME}.jar
-ENTRYPOINT java -jar "${PACKAGE_NAME}.jar"
+RUN echo "java -jar ${PACKAGE_NAME}.jar \${@}" > ./entrypoint.sh && chmod +x ./entrypoint.sh
+ENTRYPOINT ["sh", "entrypoint.sh"]
